Renamed from template

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<link rel="stylesheet" href="css/style.css" TYPE="text/css" MEDIA="screen">
 	<script src="http://www.google.com/jsapi?key=ABQIAAAADRnyuq2mdBHBb4iDhmtuZBQM-KuWdanIH38iecu_8v3ev4H-ExS0xaUAQQ_5vEh_jAbxnNm5CqTd2Q" type="text/javascript"></script>
 	<script type="text/javascript" src="js/toggle.js"></script>
-	<script type="text/javascript" src="js/template.js"></script>
+	<script type="text/javascript" src="js/auth.js"></script>
 </head>
 <body onload="checkUserStatus()">
 	<div id="header">
 		<h1>Village Volunteers Calendar</h1>
 		<a href="javascript:inout();" id="inout">Click Here To Login</a>
 	</div>
-	<iframe name="thoughtworks" id="thoughtworks" onmouseover="showFrame()" src="thoughtworks.html"></iframe>
-	<iframe name="calendar" id="calendar" src="http://www.google.com/calendar/render"></iframe>
+	<iframe name="thoughtworks" id="thoughtworks" onmouseover="showFrame()" src="thoughtworks.html" scrolling="no"></iframe>
+	<iframe name="calendar" id="calendar" src="http://www.google.com/calendar/render" scrolling="no"></iframe>
 </body>
