--- a/trunk/volunteers.html
+++ b/trunk/volunteers.html
@@ -6,7 +6,7 @@
 <body>
 	<img src="images/pixel.gif" style="position: absolute; top: -10; left: 0;"/>
 	<div align="center">
-	<input type="button" name='volunteerButton' id='volunteerButton' value="Click to get list of volunteers" onclick="initVolunteers()" /><br>
+	<input type="button" name='volunteerButton' id='volunteerButton' value="Click to get list of volunteers" onclick="initVolunteers()" /><br><br>
 	<select name='volunteers' id='volunteers' onChange='displayInfo(this.options[this.selectedIndex].value)'>
 	</select>
 	<hr width="80%" align="center">
