--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="js/toggle.js"></script>
 	<script type="text/javascript" src="js/auth.js"></script>
 </head>
-<body onload="checkUserStatus()">
+<body>
 	<div id="header">
 		<h1>Village Volunteers Calendar</h1>
 		<a href="javascript:inout();" id="inout">Click Here To Login</a>
