--- a/villages.html
+++ b/villages.html
@@ -28,7 +28,7 @@
 					<td><script>DateInput('startDate', true, 'YYYY-MM-DD')</script></td>
 					<td rowspan="2"><input type="button" class="dateButton" value="Go" onclick="initVillages();" /></td>
 				</tr>
-				<tr id="endDateRow" class="hideOnPageLoad">
+				<tr id="endDateRow">
 					<td class="dateLabel">To:</td>
 					<td><script>DateInput('endDate', true, 'YYYY-MM-DD')</script></td>
 				</tr>
