--- a/villages.html
+++ b/villages.html
@@ -26,7 +26,7 @@
 				<tr>
 					<td id="firstDateLabel" class="dateLabel">Date:</td>
 					<td><script>DateInput('startDate', true, 'YYYY-MM-DD')</script></td>
-					<td rowspan="2"><input type="button" class="dateButton" value="Go" onclick="initVillages();" /></td>
+					<td><input type="button" class="dateButton" value="Go" onclick="initVillages();" /></td>
 				</tr>
 				<tr id="endDateRow">
 					<td class="dateLabel">To:</td>
